# multi-agent-ai-podcast-generator

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt
src/podcaster/: crew.py  main.py
src/podcaster/config/: agents.yaml  tasks.yaml
src/podcaster/tools/: __init__.py  custom_tool.py
